# capnp-ls

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
docker/ubuntu/: Dockerfile
samples/: .vscodeignore  LICENSE  README.md  package.json
samples/client/: package.json
samples/client/src/: extension.ts
samples/client/src/test/: helper.ts  index.ts  runTest.ts  server.test.ts
samples/client/testFixture/schemas/: company.capnp  error_company.capnp  gen-example.capnp
src/: capnp_language_server.cpp  capnp_language_server.h  compilation_manager.cpp  compilation_manager.h  compile_error_parser.cpp  compile_error_parser.h  language_server.h  logger.h  lsp_io.cpp  lsp_io.h  lsp_message_handler.cpp  lsp_message_handler.h  lsp_types.cpp  lsp_types.h  main.cpp  server_context.h  stdin_reader.cpp  stdin_reader.h  stdout_writer.cpp  stdout_writer.h  subprocess_runner.cpp  subprocess_runner.h  symbol_resolver.cpp  symbol_resolver.h  utils.cpp  utils.h
